--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <footer>
     <p>&copy; 2024 Kai Goette. Alle Rechte vorbehalten.</p>
-    <p><a href="https://kai-goette.de/datenschutz/" style="color: #898989; margin-left: 1%; margin-right: 1%">Datenschutz</a> | <a href="https://kai-goette.de/contact/" style="color: #898989; margin-left: 1%; margin-right: 1%">Kontakt</a></p>
+    <p><a href="./datenschutz/" style="color: #898989; margin-left: 1%; margin-right: 1%">Datenschutz</a> | <a href="./contact/" style="color: #898989; margin-left: 1%; margin-right: 1%">Kontakt</a></p>
 </footer>
 </body>
 </html>
