--- a/index.html
+++ b/index.html
@@ -14,7 +14,11 @@
 
 <footer>
     <p>&copy; 2024 Kai Goette. Alle Rechte vorbehalten.</p>
-    <p><a href="./datenschutz/" style="color: #898989; margin-left: 1%; margin-right: 1%">Datenschutz</a> | <a href="./contact/" style="color: #898989; margin-left: 1%; margin-right: 1%">Kontakt</a></p>
+    <p>
+        <a href="./datenschutz/" class="footerLink" >Datenschutz</a> |
+        <a href="./contact/" class="footerLink">Kontakt</a> |
+        <a href="https://kaigoette.github.io/" class="footerLink">GitHub</a>
+    </p>
 </footer>
 </body>
 </html>
