--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <p>
         <a href="./datenschutz/" class="footerLink" >Datenschutz</a> |
         <a href="./contact/" class="footerLink">Kontakt</a> |
-        <a href="https://kaigoette.github.io/" class="footerLink">GitHub</a>
+        <a href="https://kaigoette.github.io/" class="footerLink">GitHub Portfolio</a>
     </p>
 </footer>
 </body>
