--- a/index.html
+++ b/index.html
@@ -12,6 +12,20 @@
     <p>Code & Context Student</p>
 </header>
 
+<div id="content">
+    <p>lol</p>
+    <p>lol</p>
+    <p>lol</p>
+    <p>lol</p>
+    <p>lol</p>
+    <p>lol</p>
+    <p>lol</p>
+    <p>lol</p>
+    <p>lol</p>
+    <p>lol</p>
+    <p>lol</p>
+</div>
+
 <footer>
     <p>&copy; 2024 Kai Goette. Alle Rechte vorbehalten.</p>
     <p>
