--- a/index.html
+++ b/index.html
@@ -14,17 +14,9 @@
 </header>
 
 <div id="content">
-    <p>lol</p>
-    <p>lol</p>
-    <p>lol</p>
-    <p>lol</p>
-    <p>lol</p>
-    <p>lol</p>
-    <p>lol</p>
-    <p>lol</p>
-    <p>lol</p>
-    <p>lol</p>
-    <p>lol</p>
+    <h2>
+        Hier stehen bald Sachen über mich
+    </h2>
 </div>
 
 <footer>
