--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 </div>
 
 <footer>
-    <p>&copy; 2024 Kai Goette. Alle Rechte vorbehalten.</p>
+    <p>&copy; 2024 - 2025 Kai Goette. Alle Rechte vorbehalten.</p>
     <p>
         <a href="./datenschutz/" class="footerLink" >Datenschutz</a> |
         <a href="./contact/" class="footerLink">Kontakt</a> |
