moved datenschutz and kontakt to a subdomain

--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
 <footer>
     <p>&copy; 2024 - 2025 Kai Goette. Alle Rechte vorbehalten.</p>
     <p>
-        <a href="./datenschutz/" class="footerLink" >Datenschutz</a> |
-        <a href="./contact/" class="footerLink">Kontakt</a> |
+        <a href="https://datenschutz.kai-goette.de/" class="footerLink" >Datenschutz</a> |
+        <a href="https://kontakt.kai-goette.de/" class="footerLink">Kontakt</a> |
         <a href="https://kaigoette.github.io/" class="footerLink">GitHub Portfolio</a>
     </p>
 </footer>
